fix: hamburger-menu not showing in the correct position

--- a/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_header.scss
+++ b/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_header.scss
@@ -8,8 +8,9 @@
 
     @media screen and (max-width: $breakpoint-large) {
         .hamburger-menu {
-            right: 20px;
-            top: 8px;
+            left: unset !important;
+            right: 5px;
+            top: 2px !important;
             left: inherit;
         }
     }
